--- a/complex-app/views/create-post.ejs
+++ b/complex-app/views/create-post.ejs
@@ -3,7 +3,7 @@
 <div class="container py-md-5 container--narrow">
   <%- include("includes/flash.ejs") %>
 
-  <form action="/create-post" method="POST">
+  <form class="spa-form create-post-form" action="/create-post" method="POST">
     <div class="form-group">
       <label for="post-title" class="text-muted mb-1"><small>Title</small></label>
       <input required name="title" id="post-title" class="form-control form-control-lg form-control-title" type="text" placeholder="" autocomplete="off" />
