--- a/complex-app/views/single-post-screen.ejs
+++ b/complex-app/views/single-post-screen.ejs
@@ -4,11 +4,11 @@
   <%- include("includes/flash.ejs") %>
 
   <div class="d-flex justify-content-between">
-    <h2><%= post.title %></h2>
+    <h2 id="post-id" data-id="<%= post._id %>"><%= post.title %></h2>
     <% if(post.isVistorOwner) { %>
     <span class="pt-2">
       <a href="/post/<%= post._id %>/edit" class="text-primary mr-2" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fas fa-edit"></i></a>
-      <form class="delete-post-form d-inline" action="/post/<%= post._id %>/delete" method="POST">
+      <form class="spa-form delete-post-form d-inline" action="/post/<%= post._id %>/delete" method="POST">
         <button class="delete-post-button text-danger" data-toggle="tooltip" data-placement="top" title="Delete"><i class="fas fa-trash"></i></button>
       </form>
     </span>
@@ -16,7 +16,7 @@
   </div>
 
   <p class="text-muted small mb-4">
-    <a href="/profile/<%= post.author.username %>"><img class="avatar-tiny" src="<%= post.author.avatar %>" /></a>
+    <a id="user-link" href="/profile/<%= post.author.username %>"><img class="avatar-tiny" src="<%= post.author.avatar %>" /></a>
     Posted by <a href="/profile/<%= post.author.username %>"><%= post.author.username %></a> on <%= post.createdDate.getMonth() + 1 %>/<%= post.createdDate.getDate() %>/<%= post.createdDate.getFullYear() %>
   </p>
 
